package com.projekt;

public class Korpo extends Posrednik
{
    public Korpo(String nazwa) {

        super(nazwa);
        this.type = "Korporacja";
    }
}
