package com.projekt;

public class LotCodzienny extends Lot {

    public LotCodzienny() {this.type="CD";}

}
