package com.projekt;

public class LotCotygodniowy extends Lot
{
    public LotCotygodniowy() {this.type = "CT";}

}
