package com.projekt;

public class OsobaVip extends Osoba
{
    public OsobaVip(String imie, String nazwisko) {
        super(imie, nazwisko);
        this.type = "OsobaVip";
    }
}
