@startuml

title __PROJEKT's Class Diagram__\n

  namespace com.projekt {
    class com.projekt.Bilet {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Klient {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Korpo {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Lot {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Lot {
    }
  }
  

  namespace com.projekt {
    class com.projekt.LotCodzienny {
    }
  }
  

  namespace com.projekt {
    class com.projekt.LotCotygodniowy {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Lotnisko {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Main {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Main {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Osoba {
    }
  }
  

  namespace com.projekt {
    class com.projekt.OsobaVip {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Posrednik {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Rezerwacja {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Samolot {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Samolot {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Trasa {
    }
  }
  

  namespace com.projekt {
    class com.projekt.Trasa {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypA {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypA {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypB {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypB {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypC {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypC {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypD {
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypD {
    }
  }
  

  com.projekt.Korpo -up-|> com.projekt.Posrednik
  com.projekt.Lot o-- com.projekt.Samolot : samolot
  com.projekt.Lot o-- com.projekt.Trasa : trasa
  com.projekt.Lot o-- com.projekt.Samolot : samolot
  com.projekt.Lot o-- com.projekt.Trasa : trasa
  com.projekt.LotCodzienny -up-|> com.projekt.Lot
  com.projekt.LotCotygodniowy -up-|> com.projekt.Lot
  com.projekt.Osoba -up-|> com.projekt.Klient
  com.projekt.OsobaVip -up-|> com.projekt.Osoba
  com.projekt.Posrednik -up-|> com.projekt.Klient
  com.projekt.Rezerwacja o-- com.projekt.Bilet : bilet
  com.projekt.Rezerwacja o-- com.projekt.Lot : lot
  com.projekt.Trasa o-- com.projekt.Lotnisko : baza
  com.projekt.Trasa o-- com.projekt.Lotnisko : cel
  com.projekt.Trasa o-- com.projekt.Lotnisko : baza
  com.projekt.Trasa o-- com.projekt.Lotnisko : cel
  com.projekt.TypA -up-|> com.projekt.Samolot
  com.projekt.TypA -up-|> com.projekt.Samolot
  com.projekt.TypB -up-|> com.projekt.Samolot
  com.projekt.TypB -up-|> com.projekt.Samolot
  com.projekt.TypC -up-|> com.projekt.Samolot
  com.projekt.TypC -up-|> com.projekt.Samolot
  com.projekt.TypD -up-|> com.projekt.Samolot
  com.projekt.TypD -up-|> com.projekt.Samolot


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
